Drop canvas z-index to avoid unclickable info button

--- a/src/style/components/figure.scss
+++ b/src/style/components/figure.scss
@@ -43,13 +43,9 @@
     background: rgba($ars-selected, 0.12);
     box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.45);
     top: -3px;
-    bottom: - 3px;
+    bottom: -3px;
     left: -3px;
     right: -3px;
-  }
-
-  canvas {
-    z-index: 4;
   }
 }
 
